kodcode/docker/k8s/demo2/crm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-crm
  name: demo-crm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-crm
  template:
    metadata:
      labels:
        app: demo-crm
    spec:
      containers:
        - name: demo-crm
          image: pwstaging/demo-crm:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
