kodcode/docker/k8s/demo2/crm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: democrm-service
spec:
  selector:
    app: demo-crm
  type: LoadBalancer 
  ports:
  - protocol: TCP
    port: 3000 
    targetPort: 3000 
    nodePort: 30004
