kodcode/docker/k8s/demo2/demo-crm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-crm
spec:
  rules:
    - host: ysw-ingress.ddns.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: democrm-service
                port:
                  number: 3000
